testsuite/poke.pkl/cdiv-f64-diag-2.pk
/* { dg-do compile } */

var res
  = 1L ./^ 7U; /* { dg-error "invalid operand .*" } */
